Algorithm-visualizer/AST/grammar/.antlr/AlgoParser.java
// Generated from /Users/katushaborisova/Desktop/CSE201/Project/Algorithm-visualizer/AST/grammar/AlgoParser.g4 by ANTLR 4.8
/* parser/listener/visitor header section */
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DUMMY=1, WS=2, INTEGER=3, Digit=4, FLOAT=5, VAR=6, MAIN=7, PLUS=8, MINUS=9, 
		TIMES=10, DIV=11, MOD=12, EQ=13, LT=14, MT=15, LEQ=16, MEQ=17, TRUE=18, 
		FALSE=19, LP=20, RP=21, LCB=22, RCB=23, LSB=24, RSB=25, SEMICOLON=26, 
		XOR=27, XAND=28, EQQ=29, NOTEQQ=30, WHILE=31, IF=32, ELSE=33, CONT=34, 
		BREAK=35, PLUSPLUS=36, MINUSMINUS=37, QUOTE=38, RETURN=39, DOT=40, COMMA=41, 
		LL=42, STDC=43, STDE=44, INCLUDE=45, INT=46, CHAR=47, STR=48, DOUBLE=49, 
		BOOLEAN=50, STRING=51, ID=52;
	public static final int
		RULE_file = 0, RULE_mainStmt = 1, RULE_assign = 2, RULE_exp = 3, RULE_varDec = 4, 
		RULE_whileStmt = 5, RULE_returnStmt = 6, RULE_negation = 7, RULE_block = 8, 
		RULE_stmts = 9, RULE_ifelse = 10, RULE_ifrest = 11, RULE_boolType = 12, 
		RULE_doubleType = 13, RULE_integerType = 14, RULE_arrayType = 15, RULE_string = 16, 
		RULE_type = 17, RULE_binOp = 18, RULE_unop = 19, RULE_identifier = 20, 
		RULE_variable = 21, RULE_print = 22, RULE_jump = 23, RULE_library = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "mainStmt", "assign", "exp", "varDec", "whileStmt", "returnStmt", 
			"negation", "block", "stmts", "ifelse", "ifrest", "boolType", "doubleType", 
			"integerType", "arrayType", "string", "type", "binOp", "unop", "identifier", 
			"variable", "print", "jump", "library"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'var '", "'main'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'='", "'<'", "'>'", "'<='", "'>='", "'true'", "'false'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "'||'", "'&&'", "'=='", 
			"'!='", "'while'", "'if'", "'else'", "'continue'", "'break'", "'++'", 
			"'--'", "'\"'", "'return'", "'.'", "','", "'<<'", "'std::cout'", "'std::endl'", 
			"'#include'", "'int'", "'char'", "'str'", "'double'", "'bool'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DUMMY", "WS", "INTEGER", "Digit", "FLOAT", "VAR", "MAIN", "PLUS", 
			"MINUS", "TIMES", "DIV", "MOD", "EQ", "LT", "MT", "LEQ", "MEQ", "TRUE", 
			"FALSE", "LP", "RP", "LCB", "RCB", "LSB", "RSB", "SEMICOLON", "XOR", 
			"XAND", "EQQ", "NOTEQQ", "WHILE", "IF", "ELSE", "CONT", "BREAK", "PLUSPLUS", 
			"MINUSMINUS", "QUOTE", "RETURN", "DOT", "COMMA", "LL", "STDC", "STDE", 
			"INCLUDE", "INT", "CHAR", "STR", "DOUBLE", "BOOLEAN", "STRING", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AlgoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	/* public parser declarations/members section */
	bool myAction() { return true; }
	bool doesItBlend() { return true; }
	void cleanUp() {}
	void doInit() {}
	void doAfter() {}

	public AlgoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public MainStmtContext mainStmt() {
			return getRuleContext(MainStmtContext.class,0);
		}
		public List<LibraryContext> library() {
			return getRuleContexts(LibraryContext.class);
		}
		public LibraryContext library(int i) {
			return getRuleContext(LibraryContext.class,i);
		}
		public List<StmtsContext> stmts() {
			return getRuleContexts(StmtsContext.class);
		}
		public StmtsContext stmts(int i) {
			return getRuleContext(StmtsContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(50);
				library();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			mainStmt();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << FLOAT) | (1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << LP) | (1L << LCB) | (1L << WHILE) | (1L << IF) | (1L << CONT) | (1L << BREAK) | (1L << PLUSPLUS) | (1L << MINUSMINUS) | (1L << QUOTE) | (1L << RETURN) | (1L << STDC) | (1L << INCLUDE) | (1L << INT) | (1L << CHAR) | (1L << STR) | (1L << DOUBLE) | (1L << BOOLEAN) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(57);
				stmts();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainStmtContext extends ParserRuleContext {
		public BlockContext body;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(AlgoParser.MAIN, 0); }
		public TerminalNode LP() { return getToken(AlgoParser.LP, 0); }
		public TerminalNode RP() { return getToken(AlgoParser.RP, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MainStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainStmt; }
	}

	public final MainStmtContext mainStmt() throws RecognitionException {
		MainStmtContext _localctx = new MainStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			type();
			setState(64);
			match(MAIN);
			setState(65);
			match(LP);
			setState(66);
			match(RP);
			setState(67);
			((MainStmtContext)_localctx).body = block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public VariableContext varName;
		public ExpContext index;
		public ExpContext val;
		public TerminalNode EQ() { return getToken(AlgoParser.EQ, 0); }
		public TerminalNode SEMICOLON() { return getToken(AlgoParser.SEMICOLON, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode LSB() { return getToken(AlgoParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(AlgoParser.RSB, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((AssignContext)_localctx).varName = variable();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSB) {
				{
				setState(70);
				match(LSB);
				setState(71);
				((AssignContext)_localctx).index = exp(0);
				setState(72);
				match(RSB);
				}
			}

			setState(76);
			match(EQ);
			setState(77);
			((AssignContext)_localctx).val = exp(0);
			setState(78);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public IntegerTypeContext integerType() {
			return getRuleContext(IntegerTypeContext.class,0);
		}
		public DoubleTypeContext doubleType() {
			return getRuleContext(DoubleTypeContext.class,0);
		}
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode LP() { return getToken(AlgoParser.LP, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode RP() { return getToken(AlgoParser.RP, 0); }
		public UnopContext unop() {
			return getRuleContext(UnopContext.class,0);
		}
		public NegationContext negation() {
			return getRuleContext(NegationContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public BinOpContext binOp() {
			return getRuleContext(BinOpContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				{
				setState(81);
				integerType();
				}
				break;
			case FLOAT:
				{
				setState(82);
				doubleType();
				}
				break;
			case TRUE:
			case FALSE:
				{
				setState(83);
				boolType();
				}
				break;
			case QUOTE:
				{
				setState(84);
				string();
				}
				break;
			case LP:
				{
				setState(85);
				match(LP);
				setState(86);
				exp(0);
				setState(87);
				match(RP);
				}
				break;
			case PLUSPLUS:
			case MINUSMINUS:
				{
				setState(89);
				unop();
				setState(90);
				exp(6);
				}
				break;
			case MINUS:
				{
				setState(92);
				negation();
				}
				break;
			case ID:
				{
				setState(93);
				identifier();
				}
				break;
			case LCB:
				{
				setState(94);
				arrayType();
				}
				break;
			case STRING:
				{
				setState(95);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(104);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(98);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(99);
						binOp();
						setState(100);
						exp(8);
						}
						break;
					case 2:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(102);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(103);
						unop();
						}
						break;
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public VariableContext varName;
		public ExpContext arrSize;
		public ExpContext val;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AlgoParser.SEMICOLON, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode LSB() { return getToken(AlgoParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(AlgoParser.RSB, 0); }
		public TerminalNode EQ() { return getToken(AlgoParser.EQ, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			type();
			setState(110);
			((VarDecContext)_localctx).varName = variable();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSB) {
				{
				setState(111);
				match(LSB);
				setState(112);
				((VarDecContext)_localctx).arrSize = exp(0);
				setState(113);
				match(RSB);
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(117);
				match(EQ);
				setState(118);
				((VarDecContext)_localctx).val = exp(0);
				}
			}

			setState(121);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStmtContext extends ParserRuleContext {
		public ExpContext cond;
		public BlockContext body;
		public TerminalNode WHILE() { return getToken(AlgoParser.WHILE, 0); }
		public TerminalNode LP() { return getToken(AlgoParser.LP, 0); }
		public TerminalNode RP() { return getToken(AlgoParser.RP, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whileStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(WHILE);
			setState(124);
			match(LP);
			setState(125);
			((WhileStmtContext)_localctx).cond = exp(0);
			setState(126);
			match(RP);
			setState(127);
			((WhileStmtContext)_localctx).body = block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStmtContext extends ParserRuleContext {
		public ExpContext val;
		public TerminalNode RETURN() { return getToken(AlgoParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AlgoParser.SEMICOLON, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ReturnStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStmt; }
	}

	public final ReturnStmtContext returnStmt() throws RecognitionException {
		ReturnStmtContext _localctx = new ReturnStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_returnStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(RETURN);
			setState(130);
			((ReturnStmtContext)_localctx).val = exp(0);
			setState(131);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegationContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(AlgoParser.MINUS, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public NegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negation; }
	}

	public final NegationContext negation() throws RecognitionException {
		NegationContext _localctx = new NegationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_negation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(MINUS);
			setState(134);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(AlgoParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(AlgoParser.RCB, 0); }
		public List<StmtsContext> stmts() {
			return getRuleContexts(StmtsContext.class);
		}
		public StmtsContext stmts(int i) {
			return getRuleContext(StmtsContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LCB);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << FLOAT) | (1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << LP) | (1L << LCB) | (1L << WHILE) | (1L << IF) | (1L << CONT) | (1L << BREAK) | (1L << PLUSPLUS) | (1L << MINUSMINUS) | (1L << QUOTE) | (1L << RETURN) | (1L << STDC) | (1L << INCLUDE) | (1L << INT) | (1L << CHAR) | (1L << STR) | (1L << DOUBLE) | (1L << BOOLEAN) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(137);
				stmts();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public LibraryContext library() {
			return getRuleContext(LibraryContext.class,0);
		}
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AlgoParser.SEMICOLON, 0); }
		public JumpContext jump() {
			return getRuleContext(JumpContext.class,0);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmts);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				whileStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				ifelse();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				returnStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				print();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(149);
				library();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150);
				varDec();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(151);
				assign();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(152);
				exp(0);
				setState(153);
				match(SEMICOLON);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(155);
				jump();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseContext extends ParserRuleContext {
		public ExpContext cond;
		public BlockContext thn;
		public TerminalNode IF() { return getToken(AlgoParser.IF, 0); }
		public TerminalNode LP() { return getToken(AlgoParser.LP, 0); }
		public TerminalNode RP() { return getToken(AlgoParser.RP, 0); }
		public IfrestContext ifrest() {
			return getRuleContext(IfrestContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(IF);
			setState(159);
			match(LP);
			setState(160);
			((IfelseContext)_localctx).cond = exp(0);
			setState(161);
			match(RP);
			setState(162);
			((IfelseContext)_localctx).thn = block();
			setState(163);
			ifrest();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfrestContext extends ParserRuleContext {
		public BlockContext thn;
		public TerminalNode ELSE() { return getToken(AlgoParser.ELSE, 0); }
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfrestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifrest; }
	}

	public final IfrestContext ifrest() throws RecognitionException {
		IfrestContext _localctx = new IfrestContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ifrest);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				match(ELSE);
				setState(166);
				ifelse();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				match(ELSE);
				setState(168);
				((IfrestContext)_localctx).thn = block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolTypeContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(AlgoParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(AlgoParser.FALSE, 0); }
		public BoolTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolType; }
	}
